--- a/index.html
+++ b/index.html
@@ -86,248 +86,283 @@
 
       <!--  #region section feature-->
       <section class="section-feature">
-        <h2 class="feature-title">Product was Built Specifically for You</h2>
-        <ul class="feature-list">
-          <li class="feature-list-item">
-            <h3 class="feature-list-subtitle">First click tests</h3>
-            <p class="feature-list-text">
-              While most people enjoy casino gambling,
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-subtitle">Design surveys</h3>
-            <p class="feature-list-text">
-              Sports betting, lottery and bingo playing for the fun
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-subtitle">Preference tests</h3>
-            <p class="feature-list-text">
-              The Myspace page defines the individual.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-subtitle">Five second tests</h3>
-            <p class="feature-list-text">
-              Personal choices and the overall personality of the person.
-            </p>
-          </li>
-        </ul>
-        <button type="button" class="feature-btn">SIGN UP NOW</button>
+        <div class="container">
+          <h2 class="feature-title">Product was Built Specifically for You</h2>
+          <ul class="feature-list">
+            <li class="feature-list-item">
+              <h3 class="feature-list-subtitle">First click tests</h3>
+              <p class="feature-list-text">
+                While most people enjoy casino gambling,
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="feature-list-subtitle">Design surveys</h3>
+              <p class="feature-list-text">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="feature-list-subtitle">Preference tests</h3>
+              <p class="feature-list-text">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="feature-list-subtitle">Five second tests</h3>
+              <p class="feature-list-text">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button type="button" class="feature-btn">SIGN UP NOW</button>
+        </div>
       </section>
       <!--  #endregion section feature-->
 
       <!-- #region section Business management -->
       <section class="section-business">
-        <h2 class="section-business-title">
-          Effortless Validation for Management
-        </h2>
-        <p class="section-business-text">
-          The Myspace page defines the individual, his or her characteristics,
-          traits, personal choices and the overall personality of the person.
-        </p>
-        <ul class="section-business-list">
-          <li>
-            <h3 class="section-business-subtitle">Accessory makers</h3>
-            <p class="section-business-text">
-              While most people enjoy casino gambling, sports betting, lottery
-              and bingo playing for the fun
+        <div class="container business-container">
+          <div class="container-business-text">
+            <h2 class="section-business-title">
+              <span class="section-business-title-span"
+                >Effortless Validation for</span
+              >
+              Management
+            </h2>
+            <p class="section-business-text one">
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
             </p>
-          </li>
-          <li>
-            <h3 class="section-business-subtitle">Alterationists</h3>
-            <p class="section-business-text">
-              If you are looking for a new way to promote your business that
-              won’t cost you more money,
-            </p>
-          </li>
-        </ul>
-        <img
-          src="./images/pictures/management-img.png"
-          alt="folders and letters"
-          width="540"
-          height="500"
-        />
+            <ul class="section-business-list">
+              <li>
+                <h3 class="section-business-subtitle">Accessory makers</h3>
+                <p class="section-business-text">
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li>
+                <h3 class="section-business-subtitle">Alterationists</h3>
+                <p class="section-business-text">
+                  If you are looking for a new way to promote your business that
+                  won’t cost you more money,
+                </p>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/pictures/management-img.png"
+            alt="folders and letters"
+            width="540"
+            height="500"
+          />
+        </div>
       </section>
       <!-- #endregion section Business management -->
 
       <!-- #region section Support -->
       <section class="section-support">
-        <img
-          src="./images/pictures/support-img.png"
-          alt="laptop"
-          width="540"
-          height="500"
-        />
-        <h2 class="support-title">
-          Easier decision making for Customer Support
-        </h2>
-        <p class="support-text">
-          The Myspace page defines the individual, his or her characteristics,
-          traits, personal choices and the overall personality of the person.
-        </p>
-        <ul class="support-list">
-          <li class="support-list-item">
-            <p class="support-list-text">
-              Never worry about overpaying for your energy again.
+        <div class="container support-container">
+          <img
+            src="./images/pictures/support-img.png"
+            alt="laptop"
+            width="540"
+            height="500"
+          />
+          <div class="container-support-text">
+            <h2 class="support-title">
+              <span class="support-title-span">Easier decision making for</span>
+              Customer Support
+            </h2>
+            <p class="support-text one">
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices and the overall
+              personality of the person.
             </p>
-          </li>
-          <li class="support-list-item">
-            <p class="support-list-text">
-              We will only switch you to energy companies that we trust and will
-              treat you right
-            </p>
-          </li>
-          <li class="support-list-item">
-            <p class="support-list-text">
-              We track the markets daily and know where the savings are.
-            </p>
-          </li>
-        </ul>
+            <ul class="support-list">
+              <li class="support-list-item">
+                <p class="support-text">
+                  Never worry about overpaying for your energy again.
+                </p>
+              </li>
+              <li class="support-list-item">
+                <p class="support-text">
+                  We will only switch you to energy companies that we trust and
+                  will treat you right
+                </p>
+              </li>
+              <li class="support-list-item">
+                <p class="support-text">
+                  We track the markets daily and know where the savings are.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- #endregion section Support -->
 
       <!-- #region section Collaboration -->
       <section class="section-collaboration">
-        <h2 class="collaboration-title">Optimisation for Collaborative</h2>
-        <p class="collaboration-text">
-          Few would argue that, despite the advancements of feminism over the
-          past three decades, women still face a double standard when it comes
-          to their behavior.
-        </p>
-        <ul class="collaboration-list">
-          <li class="collaboration-list-item">
-            <h3 class="collaboration-list-subtitle">Accessory makers</h3>
-            <p class="collaboration-list-text">
-              While most people enjoy casino gambling, sports betting, lottery
-              and bingo playing for the fun
+        <div class="container collaboration-container">
+          <div class="container-collaboration-text">
+            <h2 class="collaboration-title">
+              <span class="collaboration-title-span">Optimisation for</span>
+              Collaborative
+            </h2>
+            <p class="collaboration-text one">
+              Few would argue that, despite the advancements of feminism over
+              the past three decades, women still face a double standard when it
+              comes to their behavior.
             </p>
-          </li>
-          <li class="collaboration-list-item">
-            <h3 class="collaboration-list-subtitle">Alterationists</h3>
-            <p class="collaboration-list-text">
-              If you are looking for a new way to promote your business that
-              won’t cost you more money,
-            </p>
-          </li>
-        </ul>
-        <img
-          src="./images/pictures/collaboration-img.png"
-          alt="folder with files"
-          width="540"
-          height="500"
-        />
+            <ul class="collaboration-list">
+              <li class="collaboration-list-item">
+                <h3 class="collaboration-list-subtitle">Accessory makers</h3>
+                <p class="collaboration-text">
+                  While most people enjoy casino gambling, sports betting,
+                  lottery and bingo playing for the fun
+                </p>
+              </li>
+              <li class="collaboration-list-item">
+                <h3 class="collaboration-list-subtitle">Alterationists</h3>
+                <p class="collaboration-text">
+                  If you are looking for a new way to promote your business that
+                  won’t cost you more money,
+                </p>
+              </li>
+            </ul>
+          </div>
+          <img
+            src="./images/pictures/collaboration-img.png"
+            alt="folder with files"
+            width="540"
+            height="500"
+          />
+        </div>
       </section>
       <!-- #endregion section Collaboration -->
 
       <!-- #region section Quick & Easy -->
       <section class="section-quickeasy">
-        <h2 class="section-quickeasy-title">Quick & Easy Process</h2>
-        <p class="section-quickeasy-text">
-          Do you require some help for your project: Conception workshop,
-          prototyping, marketing strategy, landing page, Ux/UI?
-        </p>
-        <ul class="section-quickeasy-list">
-          <li class="section-quickeasy-list-item">
-            <img
-              src="./images/avatars/avatar.png"
-              alt="avatar of girl"
-              width="98"
-              height="98"
-            />
-            <p class="section-quickeasy-list-text">
-              I can take care of your pitch
-            </p>
-          </li>
-          <li class="section-quickeasy-list-item">
-            <img
-              src="./images/avatars/avatar-1.png"
-              alt="avatar of women"
-              width="98"
-              height="98"
-            />
-            <p class="section-quickeasy-list-text">I can prototype your app</p>
-          </li>
-          <li class="section-quickeasy-list-item">
-            <img
-              src="./images/avatars/avatar-2.png"
-              alt="avatar of boy"
-              width="98"
-              height="98"
-            />
-            <p class="section-quickeasy-list-text">
-              I can take care of your pitch
-            </p>
-          </li>
-          <li class="section-quickeasy-list-item">
-            <img
-              src="./images/avatars/avatar-3.png"
-              alt="avatar of men"
-              width="98"
-              height="98"
-            />
-            <p class="section-quickeasy-list-text">
-              I can help marketing strategy
-            </p>
-          </li>
-          <button type="button" class="section-quickeasy-list-btm">
-            Contact our expert
-          </button>
-        </ul>
+        <div class="container container-quickeasy">
+          <h2 class="section-quickeasy-title">Quick & Easy Process</h2>
+          <p class="section-quickeasy-text">
+            Do you require some help for your project: Conception workshop,
+            prototyping, marketing strategy, landing page, Ux/UI?
+          </p>
+          <ul class="section-quickeasy-list">
+            <li class="section-quickeasy-list-item">
+              <img
+                src="./images/avatars/avatar.png"
+                alt="avatar of girl"
+                width="98"
+                height="98"
+              />
+              <p class="section-quickeasy-list-text">
+                I can take care of your pitch
+              </p>
+            </li>
+            <li class="section-quickeasy-list-item">
+              <img
+                src="./images/avatars/avatar-1.png"
+                alt="avatar of women"
+                width="98"
+                height="98"
+              />
+              <p class="section-quickeasy-list-text">
+                I can prototype your app
+              </p>
+            </li>
+            <li class="section-quickeasy-list-item">
+              <img
+                src="./images/avatars/avatar-2.png"
+                alt="avatar of boy"
+                width="98"
+                height="98"
+              />
+              <p class="section-quickeasy-list-text">
+                I can take care of your pitch
+              </p>
+            </li>
+            <li class="section-quickeasy-list-item">
+              <img
+                src="./images/avatars/avatar-3.png"
+                alt="avatar of men"
+                width="98"
+                height="98"
+              />
+              <p class="section-quickeasy-list-text">
+                I can help marketing strategy
+              </p>
+            </li>
+          </ul>
+        </div>
+        <button type="button" class="section-quickeasy-list-btm">
+          Contact our expert
+        </button>
       </section>
       <!-- #endregion section Quick & Easy -->
 
       <!-- #region section News feed -->
       <section class="section-newsfeed">
-        <h2 class="section-newsfeed">Contents Strategies</h2>
-        <p class="section-newsfeed-text">
-          We focus on ergonomics and meeting you where you work. It's only a
-          keystroke away.
-        </p>
-        <ul class="section-newsfeed-list">
-          <li class="section-newsfeed-list-item">
-            <img
-              src="./images/photo/photo/image.png"
-              alt="the person writes"
-              width="350"
-              height="185"
-            />
-            <p class="section-newsfeed-list-text">
-              By Wahid Ari | 03 March 2019
-            </p>
-            <h3 class="section-newsfeed-list-subtitle">
-              Increasing Prosperity With Positive Thinking
-            </h3>
-          </li>
-          <li class="section-newsfeed-list-item">
-            <img
-              src="images/photo/photo/Bitmap-1.png"
-              alt="people and big windows"
-              width="350"
-              height="189"
-            />
-            <p class="section-newsfeed-list-text">
-              By Wahid Ari | 03 March 2019
-            </p>
-            <h3 class="section-newsfeed-list-subtitle">
-              Motivation Is The First Step To Success
-            </h3>
-          </li>
-          <li class="section-newsfeed-list-item">
-            <img
-              src="images/photo/photo/Bitmap.png"
-              alt="sky and skyscrapers"
-              width="350"
-              height="186"
-            />
-            <p class="section-newsfeed-list-text">
-              By Wahid Ari | 03 March 2019
-            </p>
-            <h3 class="section-newsfeed-list-subtitle">
-              Success Steps For Your Personal Or Business
-            </h3>
-          </li>
-        </ul>
+        <div class="container section-newsfeed-container">
+          <h2 class="section-newsfeed-title">Contents Strategies</h2>
+          <p class="section-newsfeed-text">
+            We focus on ergonomics and meeting you where you work. It's only a
+            keystroke away.
+          </p>
+          <ul class="section-newsfeed-list">
+            <li class="section-newsfeed-list-item">
+              <img
+                src="./images/photo/photo/image.png"
+                alt="the person writes"
+                width="350"
+                height="185"
+              />
+              <p class="section-newsfeed-list-text">
+                By
+                <span class="section-newsfeed-list-text-span">Wahid Ari</span> |
+                03 March 2019
+              </p>
+              <h3 class="section-newsfeed-list-subtitle">
+                Increasing Prosperity With Positive Thinking
+              </h3>
+            </li>
+            <li class="section-newsfeed-list-item">
+              <img
+                src="images/photo/photo/Bitmap-1.png"
+                alt="people and big windows"
+                width="350"
+                height="185"
+              />
+              <p class="section-newsfeed-list-text">
+                By
+                <span class="section-newsfeed-list-text-span">Wahid Ari</span> |
+                03 March 2019
+              </p>
+              <h3 class="section-newsfeed-list-subtitle">
+                Motivation Is The First Step To Success
+              </h3>
+            </li>
+            <li class="section-newsfeed-list-item">
+              <img
+                src="images/photo/photo/Bitmap.png"
+                alt="sky and skyscrapers"
+                width="350"
+                height="185"
+              />
+              <p class="section-newsfeed-list-text">
+                By
+                <span class="section-newsfeed-list-text-span">Wahid Ari</span> |
+                03 March 2019
+              </p>
+              <h3 class="section-newsfeed-list-subtitle">
+                Success Steps For Your Personal Or Business
+              </h3>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion section News feed -->
 
